# rustdoc_copy

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
macros/: Cargo.toml  README.md
macros/src/: lib.rs  msg.rs
macros/src/custom/: doc_file.rs  doc_share.rs  mod.rs
macros/src/doc/: chunk_for_print.rs  chunk_id.rs  doc_chunk.rs  doc_chunk_mod.rs  doc_file_mod.rs  doc_item_mod.rs  doc_share_mod.rs  mod.rs  parse_doc.rs  print_doc.rs  print_item.rs  print_item_doc.rs
macros/src/doc/terms/: ids.rs  paths.rs  templates.rs
macros/src/doc_parts/: doc_chunk.rs  doc_chunk_mod.rs  doc_file_mod.rs  doc_meta.rs  mod.rs
macros/src/entries/: mod.rs  proc_doc_file.rs  proc_doc_on_only.rs  proc_doc_share.rs
macros/src/nodes/: doc_file_node.rs  doc_share_node.rs  mod.rs
macros/src/parse/: event_buffer.rs  mod.rs  parse_doc.rs  parse_manager.rs
macros/src/print/: doc_share_self.rs  link_adjuster.rs  mod.rs  print_doc_chunk_mod.rs  print_doc_file_mod.rs  print_doc_item_mod.rs  print_doc_share_item.rs  print_doc_share_mod.rs
macros/src/print/terms/: ids.rs  mod.rs  paths.rs  templates.rs
macros/src/util/: funcs.rs  mod.rs  naming.rs  rs_doc_link.rs  rs_tokens.rs
macros/src/util/md_tool/: funcs.rs  md_event.rs  md_outline.rs  md_path.rs  mod.rs  url_event.rs
macros/src/util/md_tool/md_parse/: broken_link_solver.rs  event_buffer.rs  md_parser.rs  mod.rs
macros/src/util/md_tool/md_print/: md_partition.rs  md_printer.rs  md_splitter.rs  print_out.rs
macros/src/util/md_tools/: funcs.rs  md_event.rs  mod.rs
macros/src/util/md_tools/md_events/: mod.rs  text_event.rs  url_event.rs
macros/src/util/md_tools/md_parse/: md_parser.rs  mod.rs
macros/src/util/md_tools/md_print/: md_partition.rs  md_printer.rs  md_splitter.rs  mod.rs  print_out.rs
macros/src/util/syn_tool/: abst_item.rs  base_item.rs  doc_attr.rs  funcs.rs  mod.rs  ns.rs  root_item.rs  side_item.rs  skip_attr.rs
macros/src/util/syn_tools/: base_item.rs  doc_attr.rs  mod.rs  ns.rs  side_item.rs
macros/src/util/syn_tools/side_items/: field_nt.rs  impl_item_nt.rs  mod.rs  trait_item_nt.rs  variant_nt.rs
md/: cmark_features.md  common_titles_in_doc.md  common_titles_in_sec.md  copy_guard.md  links.md  multi_sections.md  parts.md  simple.md  unofficial_header.md  untitled_doc.md
src/: lib.rs  macros.rs  prelude.rs
src/docs/: mod.rs  normal_path_error.md  self_path_warning.md
tests/it/: doc_file.rs  doc_share.rs  doc_skip.rs  main.rs
tests_compile_fail/: mod.rs
