[package]
name = "rustdoc_copy_macro"
version = "0.2.0"
description = "Macros for `rustdoc_copy`"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
iter_seq_ext = { optional = true, version = "0.1" }
proc-macro2 = { optional = true, version = "1" }
pulldown-cmark = { optional = true, version = "0.13.0", default-features = false }
pulldown-cmark-to-cmark = { optional = true, version = "22"}
quote = { optional = true, version = "1" }
rustc_lexer = { optional = true, version = "0.1" }
syn = { optional = true, version = "2", features = ["full"] }
unicode-ident = { optional = true, version = "1" }

[features]
default = ["doc_on"]
doc_on = [
    "dep:iter_seq_ext",
    "dep:proc-macro2",
    "dep:pulldown-cmark",
    "dep:pulldown-cmark-to-cmark",
    "dep:quote",
    "dep:rustc_lexer",
    "dep:syn",
    "dep:unicode-ident",
]
